# Prototype-Danzig

./: .gitignore  CMakeLists.txt  README.md  main.cpp
audio/: CMakeLists.txt
common/: CMakeLists.txt  NonCopyable.hpp
core/: CMakeLists.txt  Error.hpp  Logger.cpp  Logger.hpp  Window.cpp  Window.hpp
media/: CMakeLists.txt
render/: CMakeLists.txt
sync/: CMakeLists.txt
tests/: CMakeLists.txt  test_core.cpp
